--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "restaurant-react-web",
+  "homepage": "http://localhost/react/restaurant-react-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
